Governance fill gaps

--- a/journal/202001.md
+++ b/journal/202001.md
@@ -10,9 +10,11 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 - pi activity spike
 - voting progress
 
-## Voting reminder
+## Cast your votes!
 
-{still ~week to go}
+Consensus change vote to enable block header commitments as defined in [DCP0005](https://github.com/decred/dcps/blob/master/dcp-0005/dcp-0005.mediawiki) is steadily [progressing](https://explorer.dcrdata.org/agenda/headercommitments) with 99.95% 'yes' votes among the 60.6% tickets actively voting 'yes' or 'no', while 39.4% of tickets cast 'abstain' votes.
+
+It is still around 1 week to go. If you have a preference please [configure it](https://docs.decred.org/governance/consensus-rule-voting/how-to-vote/) in your solo and VSP voting wallets.
 
 ## Release v1.5.1
 
@@ -156,26 +158,22 @@ Community stats:
 
 ## Governance
 
-CV progress https://explorer.dcrdata.org/agenda/headercommitments
-
-In January the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 14,121 DCR and spent 15,560 DCR. Using January's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. At December's average daily rate of ${n.nn}, the USD figure billed for work completed in that month is ${n}K. As of Feb 1, Treasury balance is 642,082 DCR (12.2 million USD at $18.96).
+In January the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 14,121 DCR and spent 15,560 DCR. Using January's daily average DCR/USD rate of $18.00, this is $254K received and $280K spent. At December's average daily rate of $18.32, the USD figure billed for work completed in that month is $285K. As of Feb 1, Treasury balance is 642,082 DCR (12.2 million USD at $18.96).
 
 There were 6 proposals submitted in Jan, 5 have already been voted on and 1 is still under discussion.
 
-* The proposal from [Monde]() Public Relations was approved with 72% approval and turnout of 25%.
-* The proposal from [Ditto](https://proposals.decred.org/proposals/012b4e335f25704e28ef196d650316dca421f730225d39e37b31b3c646eb8497) PR was rejected with 17% approval and turnout of 35%.
-* The Decred Open Source Research Program renewal of [phase 3](https://proposals.decred.org/proposals/e3675649075a2f92269d8cdc2e1dfd71b16796477df31de7d2868cccfcffb13f) was approved with 82% approval and turnout of 29%.
-* A [proposal](https://proposals.decred.org/proposals/063e38270b475ad680e98c12d1a48e322f4e8defe40b265272ea60c6d2202b13) from @dezyrth to manage the project's Facebook account and represent Decred at events was approved with 76% yes votes and participation of 21%.
-* A proposal for [stickers](https://proposals.decred.org/proposals/4acb95564d36488a7ee64683a84dd7954982b2f4743e2f7a15477231f863442f) was rejected with 5% yes votes and participation of 21%.
-* A [proposal](https://proposals.decred.org/proposals/95cfb73254a032b2c199c37bb499d6f172d044b1f38016279c5bbca6572251f0) by @exitus to produce video content for Decred is under discussion.
+- The proposal from [Monde](https://proposals.decred.org/proposals/bdd02d82547bd78fc95939c1e2b3df21ebec6e8d31444df5bea3c133b0199f05) Public Relations was approved with 72% approval and turnout of 25%.
+- The proposal from [Ditto](https://proposals.decred.org/proposals/012b4e335f25704e28ef196d650316dca421f730225d39e37b31b3c646eb8497) PR was rejected with 17% approval and turnout of 35%.
+- The Decred Open Source Research Program renewal of [phase 3](https://proposals.decred.org/proposals/e3675649075a2f92269d8cdc2e1dfd71b16796477df31de7d2868cccfcffb13f) was approved with 82% approval and turnout of 29%.
+- A [proposal](https://proposals.decred.org/proposals/063e38270b475ad680e98c12d1a48e322f4e8defe40b265272ea60c6d2202b13) from @dezyrth to manage the project's Facebook account and represent Decred at events was approved with 76% yes votes and participation of 21%.
+- A proposal for [stickers](https://proposals.decred.org/proposals/4acb95564d36488a7ee64683a84dd7954982b2f4743e2f7a15477231f863442f) was rejected with 5% yes votes and participation of 21%.
+- A [proposal](https://proposals.decred.org/proposals/95cfb73254a032b2c199c37bb499d6f172d044b1f38016279c5bbca6572251f0) by @Exitus to produce video content for Decred is under discussion.
 
-Politeia Digest [Issue 26](https://blockcommons.red/politeia-digest/issue026/) has more detail on all of the proposals and the Market Maker auditing. Auditing tools have been developed which process i2's order open/close history to calculate uptime on a percentage basis. If uptime is less than the 90% quoted in i2's proposal, their fees for the month will be reduced proportionally.
+Politeia Digest [issue 26](https://blockcommons.red/politeia-digest/issue026/) has more detail on all of the proposals and the Market Maker auditing. Auditing tools have been developed which process i2's order open/close history to calculate uptime on a percentage basis. If uptime is less than the 90% quoted in i2's proposal, their fees for the month will be reduced proportionally.
 
 Also in Jan, @jy-p prepared some numbers about the geographical reach of Decred Treasury spending which were featured in an [article](https://www.coindesk.com/is-bitcoin-in-2020-really-like-the-early-internet) on Coindesk: 
 
-> To be fair, cryptocurrency has already proven its usefulness through cross-border collaboration. For example, the Decred treasury has distributed roughly $3.5 million worth of cryptocurrency to more than 60 contributors, according to the community’s press representative. Roughly 30 percent of these contributors hail from Latin America and 15 percent are from Africa, a more global distribution than comparable Silicon Valley startups. 
-
-
+> To be fair, cryptocurrency has already proven its usefulness through cross-border collaboration. For example, the Decred treasury has distributed roughly $3.5 million worth of cryptocurrency to more than 60 contributors, according to the community's press representative. Roughly 30 percent of these contributors hail from Latin America and 15 percent are from Africa, a more global distribution than comparable Silicon Valley startups. 
 
 ## Network
 
