--- a/journal/202001.md
+++ b/journal/202001.md
@@ -183,35 +183,30 @@ Staking: 30-day average ticket price was 138.3 DCR (+0.8) per dcrstats.com. The 
 
 Nodes: Throughout [January](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1577836800000&to=1580515200000) there was an average of 137 public listening nodes and 323 normal nodes per dcr.farm. Version distribution: 50.8% use dcrd v1.4, 21.1% use dcrd v1.5, 9.0% use dcrd v1.5 dev and RC builds, 3.1% use dcrd v1.6 dev builds, 2.2% use dcrd v1.5.1, 5.6% use dcrwallet v1.4, 3.4% use dcrwallet v1.5, 0.6% use dcrwallet v1.5.1.
 
-Data from a node that was running since block 0 [shows](https://matrix.to/#/!vGasNHFXqjoEWUBTIi:decred.org/$15792934191332SWDSY:decred.org?via=decred.org&via=matrix.org&via=zettaport.com) that Decred mainnet chain had 2517 reorgs of depth 1, 25 reorgs of depth 2, 3 reorgs of depth 3, and 0 reorgs of depth greater than 3.
+Data from a node that was running since block 0 [shows](https://matrix.to/#/!vGasNHFXqjoEWUBTIi:decred.org/$15792934191332SWDSY:decred.org) that Decred mainnet chain had 2517 reorgs of depth 1, 25 reorgs of depth 2, 3 reorgs of depth 3, and 0 reorgs of depth greater than 3.
 
 Decred mainnet [LN map](https://ln-map.jamieholdstock.com/) shows 14 nodes and 31 channels with total capacity of 6 DCR, as of Feb 6.
 
 ## Integrations
 
+VSP news:
 
-- The VSP ["DecredVoting"](https://www.reddit.com/r/decred/comments/euqd4h/introducing_split_ticket_dashboard_on/) added a split ticket dashboard for its users.
-- A new VSP ["YieldWallet"](https://github.com/decred/dcrwebapi/pull/87) has been added.
+- New VSP launched by the YieldWallet staking-as-a-service provider, available at [decred.yieldwallet.io](https://decred.yieldwallet.io/). Service fee is 2%.
+- [decredvoting.com](https://decredvoting.com/) VSP [announced](https://www.reddit.com/r/decred/comments/euqd4h/introducing_split_ticket_dashboard_on/) a new split ticket dashboard that "provides split ticket users with a complete summary view of all their split tickets along with personalized analytics data".
+- The following VSPs were removed from the [listing](https://decred.org/vsp/) for poor performance: [d1pool.com](https://github.com/decred/dcrwebapi/pull/63), [dcr.grassfed.network](https://github.com/decred/dcrwebapi/pull/70) and [dcr.pos.fans](https://github.com/decred/dcrwebapi/pull/79).
 
+It turns out that the [dcr.farm](https://dcr.farm/) VSP runs a bunch of useful services without any advertising. Let's fix that:
 
-- The following VSP's were removed from the dcrwebapi list: d1pool, grassfed and dcr.fans
+- [seed.dcr.farm](https://seed.dcr.farm/) is a dcrd seed node with dedicated bandwidth, located in France.
+- [explorer.dcr.farm](https://explorer.dcr.farm/) is an alternative explorer for Decred blockchain.
+- Sophisticated [status dashboard](https://status.dcr.farm/) for all services, including the 6 voting wallets.
+- We're actively using it at DJ but let's mention for completeness: [charts.dcr.farm](https://charts.dcr.farm/) has ~16 dashboards with various charts with some unique like [Nodes](https://charts.dcr.farm/d/000000014/nodes), [VSPs](https://charts.dcr.farm/d/000000016/proof-of-stake-pools) and [Transaction Fees](https://charts.dcr.farm/d/000000013/transaction-fees) showing irregular high and low fees.
 
 Exchange integrations:
 
-We saw some reports that [Bittrex](https://twitter.com/Cjfan23/status/1218727480854446081) and [Binance](https://www.reddit.com/r/decred/comments/ew1vyc/binance_dcr_withdrawls_disabled/) wallets were both in maintenance mode for awhile. As of writing both are working. 
-
+- We saw some reports that [Bittrex](https://twitter.com/Cjfan23/status/1218727480854446081) and [Binance](https://www.reddit.com/r/decred/comments/ew1vyc/binance_dcr_withdrawls_disabled/) wallets were both in maintenance mode for a while. As of writing both are working. 
 
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
-
-## Adoption
-
-New merchants:
-
-- {}
-
-{applications of Decred blockchain and related projects: Politeia, dcrtime, atomicswap}
-
-{investment adoption}
 
 ## Outreach
 
