Outreach add link

--- a/journal/202001.md
+++ b/journal/202001.md
@@ -210,7 +210,7 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 ## Outreach
 
-On February 8th, Decred turned four, and the community celebrated the event with [#DecredGlobalMeetup](https://twitter.com/hashtag/DecredGlobalMeetup). Events took place in at least a dozen cities all across the world to celebrate the community and technology Decred has built.
+On February 8th, Decred turned four, and the community celebrated the event with [#DecredGlobalMeetup](https://twitter.com/hashtag/DecredGlobalMeetup). Events took place in at least a [dozen cities](https://twitter.com/decredproject/status/1225440495108841475) all across the world to celebrate the community and technology Decred has built.
 
 In January, the new subpages of the website were completed and submitted for translations, and it is expected to go live in February. This offers a visual refresh to the site, and aligns with the current project [messaging](https://github.com/decredcommunity/pr/blob/release/foundational-messaging.md). The website has been simplified, and all future updates will be achievable in no longer than three months start to finish.
 
