--- a/journal/202001.md
+++ b/journal/202001.md
@@ -58,8 +58,6 @@ CMS received a bunch of fixes and UI enhancements.
 
 Work continues on CMS UI [redesign](https://github.com/decred/politeiagui/pull/1625) and adding dark mode to Politeia.
 
-{ how about: mention pi-ui: what is it, why, where does it stand }
-
 [dcrstakepool](https://github.com/decred/dcrstakepool):
 
 dcrstakepool v1.5.0 was released. This release contains all development work completed since v1.2.0 (Sep 2019). Since then, 7 contributors have produced and merged 37 pull requests. Changes include minor GUI enhancements, improved HTTP request logging, streamlining of existing code, and various bug fixes. For the full list of changes and upgrade path see the [release notes](https://github.com/decred/dcrstakepool/blob/master/docs/release-note-1.5.0.md).
@@ -401,5 +399,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, Dustorf, richardred, s\_ben
-- reviews and feedback: buck54321, davecgh, emiliomann, lukebp
+- reviews and feedback: buck54321, davecgh, dnldd, emiliomann, jholdstock, lukebp, matheusd
 - title image: {}
