--- a/journal/202001.md
+++ b/journal/202001.md
@@ -224,20 +224,19 @@ Attended:
 
 - Jan 7 - [Digital Money Forum](https://thedigitalmoneyforum.com/) - Las Vegas, USA. @akinsawyerr argued for decentralized networks and individual sovereignty on [The Libra Effect](https://thedigitalmoneyforum.com/Sessions/the-problem-with-old-money-a-great-debate/) panel, which was featured on [CoinDesk](https://www.coindesk.com/libra-association-exec-world-needs-us-because-bitcoin-is-not-a-means-of-payment), and also talked to several journalists. ([report](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$157859800075195pLJde:decred.org), [photos](https://twitter.com/AkinSawyerr/status/1214614201517232128))
 - Jan 14 - [Cryptopia Documentary Premiere](https://www.meetup.com/en-AU/BC-Aus/events/267242503/) - Melbourne, Australia. Decred was invited to be an event sponsor and launch partner of Cryptopia Film, a documentary about the key themes within cryptocurrency, which include regulation, privacy, financial services, governance, marketing and development. The entire theatre was booked out with over 140 guests from the crypto and blockchain community. @eSizeDave and @zohand talked Decred on a panel discussion and were quoted in the official [press release](https://prwire.com.au/r/87706). ([report](https://github.com/decredcommunity/events/blob/master/reports/20200114-cryptopiafilm-world-premiere-melbourne-australia.md))
-- Jan 14 - [GoCracow #7](https://www.meetup.com/en-AU/GoCracow/events/265765051/) - Kraków, Poland. { add highlights from the report } ([report](https://github.com/decredcommunity/events/blob/master/reports/20200114-gocracow7-meetup-krakow-poland.md))
+- Jan 14 - [GoCracow #7](https://www.meetup.com/en-AU/GoCracow/events/265765051/) - Kraków, Poland. @kozel introduced ~30 Go devs to cryptocurrencies and Decred. The audience was in general attentive but the most active participants were the ones who self-described as already familiar or enthusiastic about crypto. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200114-gocracow7-meetup-krakow-poland.md))
 - Jan 24 - Blockchain Technology and Use Cases - Casablanca, Morocco. @arij was invited to talk at the event co-organized by the Moroccan Youth Ministry with the topic "The role of new technologies in promoting the positive development of young people". @arij talked about blockchains and introduced Politeia and LN to the audience of around 50 people of different backgrounds, mostly young people. ([photos](https://twitter.com/DecredArabia/status/1220819101586685952))
 - Jan 29-31 - [Crypto 101 Online Summit](https://www.crypto2020summit.com/) - Internet. @lukebp outlined Decred's plans for 2020, the presentation will be uploaded to YouTube when ready.
 
 Upcoming:
 
-- Feb 6-8 - Decred 4th Anniversary. {populate if release before 8th}
-- Feb ~8 - Decred 4th Anniversary - Brazil. 5 cities confirmed for the anniversary celebration of the genesis block: [São Paulo](https://twitter.com/Decred_BR/status/1224769693904461825), [Belo Horizonte](https://twitter.com/Decred_BR/status/1224782204078829568), [Rio de Janeiro](https://twitter.com/Decred_BR/status/1224770339374157824), [Natal](https://twitter.com/Decred_BR/status/1224770644258312192) and [Juiz de Fora](https://twitter.com/Decred_BR/status/1224771191778488336). {drop if releasing after this}
+- Feb 8 - [Blockchain and AI](https://www.eventbrite.com/e/blockchain-and-ai-best-tools-for-the-development-of-nations-tickets-91389994935) - Casablanca, Morocco. @arij will talk about Decred's achievements during its 4 years. A small party at the end will mark Decred's anniversary.
+- Feb 8 - [Decred Crypto Hangouts](https://www.eventbrite.com/e/decred-crypto-hangout-learn-about-career-opportunities-in-the-industry-tickets-91830803405) - Ikeja, Lagos. Huobi, Yellowcard and Telos4Africa will be in attendance.
+- Feb 8 - [Decred Global Meetup](https://www.meetup.com/pt-BR/DecredBrasil/events/268496816/) - Salvador, Brazil.
 - Mar 12-13 - [Blockchain Summit Latam](https://www.blockchainsummit.la) - Panama City, Panama. Decred will be a silver sponsor.
 - Mar 18 - [Campus Party Amazonia](https://brasil.campus-party.org/campus-party-amazonia-2020/) - Manaus, Brazil. Decred will have 2 talks and several other activities.
 - Mar 20-21 - [CIBTC Blockchain Summit](http://cibtc.es/) - Motril, Spain. Decred will be gold sponsor. The event is part of a big Decred en Español tour in Spain where @elian will be organising meetups and a workshop with local communities in Madrid, Barcelona, Bilbao, Valencia, Vigo and Motril.
 - May 30-31 - [Bitconf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. Decred will have multiple talks on various subjects.
-
-{announcements in Events domain}
 
 ## Media
 
