--- a/journal/202001.md
+++ b/journal/202001.md
@@ -280,9 +280,7 @@ Audio:
 
 Comm systems news:
 
-- Slack is going down, bridge is being burned, flee to the matrix while you still can!
-
-{selected discussed topics, as bullet list or one paragraph per topic}
+- Slack is going down, bridge is being burned, flee to the [Matrix](https://decred.org/matrix/) while you still can!
 
 Selected Reddit posts:
 
@@ -293,23 +291,22 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
-- Stakey reminds to control your keys https://twitter.com/DCRComic/status/1212754642481881088
-- adaptability example https://twitter.com/BarnardTheBear/status/1213893268351672320
-- Decred is boring https://twitter.com/marco_peereboom/status/1218178834786324480
-- How often does your CEO or project lead tell you to engineer him out of the project? https://twitter.com/marco_peereboom/status/1212849047456927744
+- Stakey reminds to [control your keys](https://twitter.com/DCRComic/status/1212754642481881088).
+- First to market vs adaptable, a historical [example](https://twitter.com/BarnardTheBear/status/1213893268351672320).
+- Why Decred is [boring](https://twitter.com/marco_peereboom/status/1218178834786324480).
+- How often does your CEO/project lead tell you to [engineer him out](https://twitter.com/marco_peereboom/status/1212849047456927744) of the project?
 - @DCRComic Atomic Swaps [comic](https://twitter.com/DCRComic/status/1222874521507717121).
-- @DCRComic [take](https://twitter.com/DCRComic/status/1220367582479425537?s=20) on the BCH development funding story.
-- @DCRComic [thread](https://twitter.com/DCRComic/status/1218189767759859713?s=20) about dcrdata.
+- @DCRComic [take](https://twitter.com/DCRComic/status/1220367582479425537) on the BCH development funding story.
+- @DCRComic [thread](https://twitter.com/DCRComic/status/1218189767759859713) about dcrdata.
 - An [update](https://twitter.com/chappjc/status/1222004371199864834) on dcrdex from @chappjc, "this Spring".
-- AGNFAB1 DCR is WATER BTC is [FiRE](https://twitter.com/AGNFAB1/status/1220091425737580544).
 - @richardred [opened](https://twitter.com/RichardRed0x/status/1219381114768429057) the pod bay doors to vote for the open source research program.
-- Jesse Walden of a16z [tweeted](https://twitter.com/jessewldn/status/1214304297468538881) a positive message about cryptocommons.cc, also mentioning Decred. {not sure about this one}
 - @lukebp [tweets](https://twitter.com/lukebp_/status/1217871970420711424) about the benefits of being able to amend consensus rules to enhance network security and UX.
-- @decredproject [tweet](https://twitter.com/decredproject/status/1217509346667585536) about the new getting started page on dcrdocs sought to get people #Decreducated.
 - The Ditto and Monde PR proposals drew some attention from journalists in the space, including the Block's [Frank Chaparro](https://twitter.com/fintechfrank/status/1215704016564428802).
-- @Dustorf [on](https://twitter.com/lefebvre_dustin/status/1220397690602901504?s=20) the digital Decred contractor collective.
-- @Degeri points out that the websites of most top blockchain projects are [feeding](https://twitter.com/degeri_crypto/status/1217372695483965441?s=20) information to Google.
-- [#DrawStakey](https://twitter.com/DCRComic/status/1220732376088809477)
+- @Dustorf on the digital Decred contractor [collective](https://twitter.com/lefebvre_dustin/status/1220397690602901504).
+- @degeri points out that the websites of most top blockchain projects are [feeding](https://twitter.com/degeri_crypto/status/1217372695483965441) information to Google.
+- [#DrawStakey](https://twitter.com/DCRComic/status/1220732376088809477) contest.
+
+{ is it too much of Twitter bullets? shall we drop some? }
 
 ## Markets
 
