--- a/journal/202001.md
+++ b/journal/202001.md
@@ -316,59 +316,41 @@ The price movement of Bitcoin from ~6500 to the ~9000 range spurred the price in
 
 ## Relevant External
 
-{PoW, ASIC resistance, full nodes, cc network security and other cc tech}
-
-December's mining report from CoinShares notes a 80% Bitcoin hashrate increase since Jun 2019, from ~50 to ~90 Eh/s (Exahash per second). 70% of the ~40 Eh/s added is speculated to come from China, while China's share in the total hashrate is estimated to be 65%. The estimated "breakeven" and "miner capitulation" prices are estimated ~$6,100 and ~$3,900 respectively. Check the [highlights](https://medium.com/coinshares/bitcoins-hash-rate-grew-more-than-80-since-june-mostly-within-china-7444b20b2c89) and the full linked report for more interesting numbers.
+December's mining report from CoinShares notes a 80% Bitcoin hashrate increase since Jun 2019, from ~50 to ~90 Eh/s (Exahash per second). 70% of the added ~40 Eh/s is speculated to come from China, while China's share in the total hashrate is estimated to be 65%. The "breakeven" and "miner capitulation" prices are estimated ~$6,100 and ~$3,900 respectively. Check the [highlights](https://medium.com/coinshares/bitcoins-hash-rate-grew-more-than-80-since-june-mostly-within-china-7444b20b2c89) and the full linked report for more interesting numbers.
 
 State of the Network 2019 [Year in Review](https://coinmetrics.substack.com/p/state-of-the-network-2019-year-in) by Coin Metrics compared the performance of the largest 18 cryptoassets (including DCR) across a set of market and chain metrics.
 
-[Nakamoto](https://nakamoto.com/), a new cryptocurrency-themed journal, launched on the 11th anniversary of Bitcoin's genesis block with a selection of articles from prominent blockchain personalities. The journal describes itself (and contributors) as being "pro-Bitcoin", but this caused quite a lot of [controversy](https://cryptoslate.com/nakamowho-blog-by-pro-bitcoin-technologists-bashed-by-btc-maximalists/) with some Bitcoin maximalists who took exception to articles which were about cryptocurrency projects other than Bitcoin. Many people listed as contributors have not yet [published](https://modernconsensus.com/cryptocurrencies/bitcoin/bitcoin-journal-nakamotos-rocky-start/) articles in the journal, but listing names like Roger Ver and Brendan Blumer (Block.one CEO) seems to have been enough to have other contributors like Tuur Demeester [withdrawing](https://twitter.com/TuurDemeester/status/1213939900476743680) their name. 
+[Nakamoto](https://nakamoto.com/), a new cryptocurrency-themed journal, launched on the 11th anniversary of Bitcoin's genesis block with a selection of articles from prominent blockchain personalities. The journal describes itself (and contributors) as being "pro-Bitcoin", but this caused quite a lot of [controversy](https://cryptoslate.com/nakamowho-blog-by-pro-bitcoin-technologists-bashed-by-btc-maximalists/) with some Bitcoin maximalists who took exception to articles which were about cryptocurrency projects other than Bitcoin. Many people listed as contributors have not yet [published](https://modernconsensus.com/cryptocurrencies/bitcoin/bitcoin-journal-nakamotos-rocky-start/) articles in the journal, but listing names like Roger Ver and Brendan Blumer (Block.one CEO) seems to have been enough to have other contributors like Tuur Demeester [withdrawing](https://twitter.com/TuurDemeester/status/1213939900476743680) their name.
 
 DigixDAO is to be wound down following a [vote](https://www.coindesk.com/digixdao-votes-to-liquidate-64m-treasury) in which 58 stakeholders voted [overwhelmingly](https://community.digix.global/#/proposals/0xe7d5d8aefc5f73c4c8bbc716f0c3c2dd52d5282d18217db331da4435b8e6966e) (97%) to liquidate its funding pool and reclaim their ETH. DigixDAO was formed to support an ecosystem around the Digix gold token (DGX) and promote it. Digix [conducted](https://www.coindesk.com/digixdao-votes-to-liquidate-64m-treasury) an ICO in 2016 and raised 466,648 ETH, worth $7 million at the time, and currently holds 380,000 ETH (worth $71 million at Jan 2019 prices). After the DAO platform launched in March 2019 to administer the fund the founders began to hear dissatisfaction from DAO members and requests for dissolution. They introduced [Project Ragnarok](https://community.digix.global/#/proposals/0xe7d5d8aefc5f73c4c8bbc716f0c3c2dd52d5282d18217db331da4435b8e6966e) as an option to dissolve the DAO and allow members to reclaim their ETH, and members took that option. Of the DAO token (DGD) circulating supply of 2 million, 1 million was staked to participate in DAO governance. Casual inspection of the proposals on the DigixDAO community [site](https://community.digix.global/#/) suggests turnout in proposal votes was regularly lower than 10% DGD represented, with around 20-30 voters on most proposals. The liquidation proposal had much higher participation, with 66% of circulating DGD voting to shut the whole thing down.
 
 Another ICO project to wind down and return unspent funds this month was [TruStory](https://medium.com/trustory-app/why-trustory-is-shutting-down-6d50175628eb).
 
-Decentraland are putting their Agora governance platform to use again with [two](https://decentraland.org/blog/announcements/back-to-the-polls-two-new-agora-votes/) more votes to determine ecosystem parameters. MANA holders voted on what the marketplace [fee](https://agora.decentraland.org/polls/1d955723-5158-4403-b026-32e974e2fae9) should be (fees are collected in MANA and burned), with 90% voting to increase the fee from 1% to 2.5% (the other options were for larger increases). MANA holders also voted on how much weight to give [LAND](https://agora.decentraland.org/polls/0387cebc-31a3-4e12-a7b4-e9926dd5b392) ownership in governance, having previously voted to indicate that LAND owners should also be able to vote, in this poll the MANA holders voted to give each land the equivalent voting power to 2k MANA (the lowest option available). Participation in these governance polls was around 3.5-4% of circulating MANA supply.
+Decentraland are putting their Agora governance platform to use again with [two](https://decentraland.org/blog/announcements/back-to-the-polls-two-new-agora-votes/) more votes to determine ecosystem parameters. MANA holders voted on what the marketplace [fee](https://agora.decentraland.org/polls/1d955723-5158-4403-b026-32e974e2fae9) should be (fees are collected in MANA and burned), with 90% voting to increase the fee from 1% to 2.5% (the other options were for larger increases). MANA holders also voted on how much weight to give [LAND](https://agora.decentraland.org/polls/0387cebc-31a3-4e12-a7b4-e9926dd5b392) ownership in governance, having previously voted to indicate that LAND owners should also be able to vote, in this poll the MANA holders voted to give each LAND the equivalent voting power to 2K MANA (the lowest option available). Participation in these governance polls was around 3.5-4% of circulating MANA supply.
 
-The Zcash development funding saga seems to finally be [over](https://electriccoin.co/blog/dev-fund-poll-shows-consensus/), for this epoch. However not before having to resolve some final disagreements. The first of these was about whether the ECC's funding should be capped in USD terms (limiting ECC's exposure to ZEC upside). The ECC published a [post](https://electriccoin.co/blog/dev-funds-should-be-in-zcash-not-united-states-dollars/) about the importance of ZEC-denominated incentive packages for attracting and retaining talented workers, with a 4 year vesting schedule on these to encourage long service. The post argued against a fiat-denominated cap on ECC's earnings, as it would break this incentive alignment by reducing ECC's exposure to ZEC upside. This was one of the questions put to long-standing forum members in a [poll](https://www.zfnd.org/blog/zip-1014-poll-results/), the [results](https://vote.heliosvoting.org/helios/elections/43b9bec8-39a1-11ea-914c-b6e34ffa859a/view) of which indicated that 56 did not want a cap while 18 did. Voters also opted to limit ECC's share of rewards to 35%, the smallest of the options presented. All that remains is for the Zcash Foundation and ECC to finalize the details of the agreement, and 20% of the ZEC rewards will be going to the ECC (35%), Zcash Foundation (25%) and major grants (as decided by a panel selected by the Foundation, 40%) - until the next halvening epoch, when the dance begins anew.
+The Zcash development funding saga seems to finally be [over](https://electriccoin.co/blog/dev-fund-poll-shows-consensus/), for this epoch. However not before having to resolve some final disagreements. The first of these was about whether the ECC's funding should be capped in USD terms (limiting ECC's exposure to ZEC upside). The ECC published a [post](https://electriccoin.co/blog/dev-funds-should-be-in-zcash-not-united-states-dollars/) about the importance of ZEC-denominated incentive packages for attracting and retaining talented workers, with a 4 year vesting schedule on these to encourage long service. The post argued against a fiat-denominated cap on ECC's earnings, as it would break this incentive alignment by reducing ECC's exposure to ZEC upside. This was one of the questions put to long-standing forum members in a [poll](https://www.zfnd.org/blog/zip-1014-poll-results/) on the [Helios](https://vote.heliosvoting.org/faq) voting platform, the [results](https://vote.heliosvoting.org/helios/elections/43b9bec8-39a1-11ea-914c-b6e34ffa859a/view) of which indicated that 56 did not want a cap while 18 did. Voters also opted to limit ECC's share of rewards to 35%, the smallest of the options presented. All that remains is for the Zcash Foundation and ECC to finalize the details of the agreement, and 20% of the ZEC rewards will be going to the ECC (35%), Zcash Foundation (25%) and major grants (as decided by a panel selected by the Foundation, 40%) - until the next halvening epoch, when the dance begins anew.
 
-A related disagreement as part of this final round of polling was about the importance of holding a coin holder vote. This involved [two](https://forum.zcashcommunity.com/t/staked-poll-on-zcash-dev-fund-debate/34846/121) [comprehensive](https://forum.zcashcommunity.com/t/community-sentiment-polling-results-nu4-and-draft-zip-1014/35560/375) discussions on the ZEC forum (nice to see Decred [mentioned](https://forum.zcashcommunity.com/t/staked-poll-on-zcash-dev-fund-debate/34846/210), there seems to be a contingent of the ZEC community who would like to move to a Decred-style approach). In the end the coin vote turned into more of a discussion, as can be seen in this dashboard (warning: Google drive [link](https://docs.google.com/spreadsheets/d/e/2PACX-1vSlHXhA_NoJy0RW3Gc6YY3bmYcKT_YF8oS_BrSkBnvEGGaJ56WYo7iL_9shuoh-z_DZMYojA6FpLoJv/pubhtml)).
+A related disagreement as part of this final round of polling was about the importance of holding a coin holder vote. This involved [two](https://forum.zcashcommunity.com/t/staked-poll-on-zcash-dev-fund-debate/34846/121) [comprehensive](https://forum.zcashcommunity.com/t/community-sentiment-polling-results-nu4-and-draft-zip-1014/35560/375) discussions on the ZEC forum (nice to see Decred [mentioned](https://forum.zcashcommunity.com/t/staked-poll-on-zcash-dev-fund-debate/34846/210), there seems to be a contingent of the ZEC community who would like to move to a Decred-style approach). In the end the coin vote turned into more of a discussion, as can be seen in this dashboard (warning: Google Drive [link](https://docs.google.com/spreadsheets/d/e/2PACX-1vSlHXhA_NoJy0RW3Gc6YY3bmYcKT_YF8oS_BrSkBnvEGGaJ56WYo7iL_9shuoh-z_DZMYojA6FpLoJv/pubhtml)).
 
-Round 4 of the Gitcoin Quadratic Funding experiment happened, and this [writeup](https://vitalik.ca/general/2020/01/28/round4.html) by Vitalik Buterin gives an account of how it went. This round added a Media grants stream, with a smaller matching budget ($75,000) than the main Tech grants stream ($125,000). In the early stages @antiprosynth, a prominent Ethereum twitter personality, was in line to receive $20,000 in matching funds, but after some campaigning about this other initiatives received more donations and the share of matching funds for this twitter account was reduced to $11,393. There was some further [controversy](https://twitter.com/TrustlessState/status/1217894717909848067) in the Media grants category as one of the projects involved a private group that would get privileged access to the outputs. The main beneficiary in the Tech grants category was Tornado.cash, a smart-contract based ETH mixer.
-
-{governance, funding, chain forks, community forks, controversy}
+Round 4 of the Gitcoin Quadratic Funding experiment happened, and this [writeup](https://vitalik.ca/general/2020/01/28/round4.html) by Vitalik Buterin gives an account of how it went. This round added a Media grants stream, with a smaller matching budget ($75,000) than the main Tech grants stream ($125,000). In the early stages @antiprosynth, a prominent Ethereum Twitter personality, was in line to receive $20,000 in matching funds, but after some campaigning about this other initiatives received more donations and the share of matching funds for this Twitter account was reduced to $11,393. There was some further [controversy](https://twitter.com/TrustlessState/status/1217894717909848067) in the Media grants category as one of the projects involved a private group that would get privileged access to the outputs. The main beneficiary in the Tech grants category was Tornado.cash, a smart-contract based ETH mixer.
 
 Jiang Zhuoer revealed a [plan](https://medium.com/@jiangzhuoer/infrastructure-funding-plan-for-bitcoin-cash-131fdcd2412e) to fund development of Bitcoin Cash software with 12.5% of the BCH block reward. This would be enforced for all miners by a majority of mining power, and in its initial form would have channelled all funding to a specified company. After pushback from some in the BCH community a revised [version](https://read.cash/@Jiang_Zhuoer_BTC.TOP_CEO/bch-miner-donation-plan-update-a45daad6) of the plan was published. In this new version miners will choose which of a set of pre-approved development projects to donate the 12.5% of their block rewards to. If a miner does not like any of the available options they can choose to burn that portion of their rewards instead of donating. The post also seems to suggest reducing the donation rate from 12.5% to 2-3%, and makes it clear that the details of the plan are still open to discussion. There will be a round of hashrate voting before implementation, and an interim Foundation to receive donations from miners and others, who will have votes in proportion to their donated funds.
 
 After years of delays to Dash Evolution (a suite of usability changes like user names and address books), a version of this now called Dash Platform was [released](https://dashnews.org/long-awaited-dash-evolution-platform-released-on-testnet-with-developer-documentation-hub/) on a public testnet. This is to be the first of many testnet releases ahead of any mainnet release.
 
-After [failing](https://old.reddit.com/r/dashpay/comments/egl6eu/dash_force_news_defunded_by_masternodes/) to secure funding from the Dash Treasury for the first time in 3 years, Dash Force has opted to [disband](https://app.dashnexus.org/proposals/dash-force-q1-2020/overview) their operations after [criticism](https://www.reddit.com/r/dashpay/comments/esaf38/lets_talk_about_dash_force_news/) from the community. 
-
-Bitcoin mining power is being [rented](https://www.coindesk.com/your-pgp-key-make-sure-its-up-to-date) to brute-force forge SHA-1 keys, meaning that it offers virtually no security.
+After [failing](https://www.reddit.com/r/dashpay/comments/egl6eu/dash_force_news_defunded_by_masternodes/) to secure funding from the Dash Treasury for the first time in 3 years, Dash Force has opted to [disband](https://app.dashnexus.org/proposals/dash-force-q1-2020/overview) their operations after [criticism](https://www.reddit.com/r/dashpay/comments/esaf38/lets_talk_about_dash_force_news/) from the community. 
 
 A European Central Bank [working paper](https://www.ecb.europa.eu/pub/pdf/scpwps/ecb.wp2351~c8c18bbd60.en.pdf?9bd63a4ddea2300dca05f2ccaa08c0e0) has indicated that the ECB would need to control the volume being used of any Central Bank Digital Currency (CBDC). One [analysis](https://cointelegraph.com/news/europe-central-bank-proposes-unattractive-rates-for-digital-currency) of the paper suggested that unattractive rates would be set for large holdings to discourage heavy use of the digital currency. One concern about heavy use of a CBDC would be that holders could move their funds outside the ECB's jurisdiction more easily in times of crisis.
 
 https://www.monerooutreach.org/stories/RPC-Pay.html {worth covering?}
 
+{ Proof of Keys on Jan 3: how did it go? any withdrawal problems? tell that while Jan 3 is behind, it's never too late to check your service that you still can withdraw, that they won't block your withdrawal for lame reasons and that the support is responsive }
 
+Perpetrators of the PlusToken scam are [still](https://blog.chainalysis.com/reports/plustoken-scam-bitcoin-price) churning and selling the ill-gotten 180,000 BTC from their Ponzi scheme. Although 6 people have been arrested in connection with PlusToken, the funds are still moving and being sold through OTC trades on Huobi [apparently](https://blog.chainalysis.com/reports/plustoken-scam-bitcoin-price) - possibly affecting the BTC price. The scammers' tokens are being tracked despite their use of mixing and 24,000 transactions involving 71,000 addresses to try and make this difficult - because they re-used an address. While an estimated $185 million worth of the BTC has been sold, 790K ETH of a total 800K remains untouched.
 
-{DEX}
-
-{relevant exchanges and websites}
-
-{Proof of Keys on Jan 3: how did it go? any withdrawal problems? tell that while Jan 3 is behind, it's never too late to check your service that you still can withdraw, that they won't block your withdrawal for lame reasons and that the support is responsive}
-
-{other: regulations, security, fun}
-
-Perpetrators of the PlusToken scam are [still](https://blog.chainalysis.com/reports/plustoken-scam-bitcoin-price) churning and selling the ill-gotten 180,000 BTC from their ponzi scheme. Although 6 people have been arrested in connection with PlusToken, the funds are still moving and being sold through OTC trades on Huobi [apparently](https://blog.chainalysis.com/reports/plustoken-scam-bitcoin-price) - possibly affecting the BTC price. The scammers' tokens are being tracked despite their use of mixing and 24,000 transactions involving 71,000 addresses to try and make this difficult - because they re-used an address. While an estimated $185 million worth of the BTC has been sold, 790k ETH of a total 800k remains untouched.
-
-The custodial bitcoin wallet provider Bottle Pay [shut down](https://www.coindesk.com/bitcoin-app-bottle-pay-shuts-down-over-impending-eu-money-laundering-laws) in December, citing the AMLD5 EU regulation coming into effect Jan 10, 2020. From the [announcement](https://bottlepay.helpscoutdocs.com/article/40-official-announcement-on-the-shutdown-of-bottle-pay): "The amount and type of extra personal information we would be required to collect from our users would alter the current user experience so radically, and so negatively, that we are not willing to force this onto our community.". Standing by the principles and shutting down is the opposite of doing [whatever it takes](https://thenextweb.com/hardfork/2018/09/05/shapeshift-cryptocurrency-exchange-kyc/) to keep the business afloat. The case can serve as a yet another signal to focus on improving self-custodial crypto software.
+The custodial bitcoin wallet provider Bottle Pay [shut down](https://www.coindesk.com/bitcoin-app-bottle-pay-shuts-down-over-impending-eu-money-laundering-laws) in December, citing the AMLD5 EU regulation coming into effect Jan 10, 2020. From the [announcement](https://bottlepay.helpscoutdocs.com/article/40-official-announcement-on-the-shutdown-of-bottle-pay): "The amount and type of extra personal information we would be required to collect from our users would alter the current user experience so radically, and so negatively, that we are not willing to force this onto our community". Standing by the principles and shutting down is the opposite of doing [whatever it takes](https://thenextweb.com/hardfork/2018/09/05/shapeshift-cryptocurrency-exchange-kyc/) to keep the business afloat. The case can serve as a yet another signal to focus efforts on improving self-custodial crypto software.
 
 $500 billion being pumped into the overnight money (repo) market by the Fed has drawn the attention of Colin Harper of Bitcoin Magazine, in a good [article](https://bitcoinmagazine.com/articles/the-fed-has-pumped-500-billion-into-the-repo-market-where-does-it-end) that introduces the subject and asks what is going on.
-
-
-
-
 
 ## About This Issue
 
