--- a/journal/202001.md
+++ b/journal/202001.md
@@ -13,7 +13,7 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 ## Cast your votes!
 
-Consensus change vote to enable block header commitments as defined in [DCP0005](https://github.com/decred/dcps/blob/master/dcp-0005/dcp-0005.mediawiki) is steadily [progressing](https://explorer.dcrdata.org/agenda/headercommitments) with 99.95% 'yes' votes among the 60.6% tickets actively voting 'yes' or 'no', while 39.4% of tickets cast 'abstain' votes.
+Consensus change vote to enable block header commitments as defined in [DCP0005](https://github.com/decred/dcps/blob/master/dcp-0005/dcp-0005.mediawiki) is steadily [progressing](https://explorer.dcrdata.org/agenda/headercommitments). Out of the 60.6% active Yes/No votes 99.95% are Yes, while the remaining 39.4% votes are Abstain.
 
 It is still around 1 week to go. If you have a preference please [configure it](https://docs.decred.org/governance/consensus-rule-voting/how-to-vote/) in your solo and VSP voting wallets.
 
@@ -138,9 +138,9 @@ Dev activity stats for January: 246 active PRs, 210 master commits, 58K added an
 
 ## People
 
-Welcome to new first time contributors with code merged to master: Ole Andre Birkedal ([dcrlnd](https://github.com/decred/dcrlnd/commits?author=termoose)), Pablito Labarta ([dcrweb](https://github.com/decred/dcrweb/commits?author=pLabarta)).
+Welcome to new first time contributors with code merged to master: @termoose ([dcrlnd](https://github.com/decred/dcrlnd/commits?author=termoose)) and @pablito ([dcrweb](https://github.com/decred/dcrweb/commits?author=pLabarta)).
 
-Congratulations to first contractors granted the Decred Contractor Clearance via the new CMS process: @bgptr (Development), @teknico (Development), @decreddragon (Marketing).
+Congratulations to first contractors granted the Decred Contractor Clearance via the new CMS process: @bgptr (development), @teknico (development) and @decreddragon (marketing).
 
 The following people were removed from the [contributors](https://decred.org/contributors/) page: Leslie Ankney, Elizabeth Bagot, Margaret Huang, Milvian Prieto, Denys Zayets, Tim Hebel, Phillip Conrad, Justin Santoro, Bill Xing.
 
@@ -172,7 +172,7 @@ There were 6 proposals submitted in Jan, 5 have already been voted on and 1 is s
 
 Politeia Digest [issue 26](https://blockcommons.red/politeia-digest/issue026/) has more detail on all of the proposals and the Market Maker auditing. Auditing tools have been developed which process i2's order open/close history to calculate uptime on a percentage basis. If uptime is less than the 90% quoted in i2's proposal, their fees for the month will be reduced proportionally.
 
-Also in Jan, @jy-p prepared some numbers about the geographical reach of Decred Treasury spending which were featured in an [article](https://www.coindesk.com/is-bitcoin-in-2020-really-like-the-early-internet) on Coindesk: 
+Also in Jan, @jy-p prepared some numbers about the geographical reach of Decred Treasury spending which were featured in an [article](https://www.coindesk.com/is-bitcoin-in-2020-really-like-the-early-internet) on CoinDesk: 
 
 > To be fair, cryptocurrency has already proven its usefulness through cross-border collaboration. For example, the Decred treasury has distributed roughly $3.5 million worth of cryptocurrency to more than 60 contributors, according to the community's press representative. Roughly 30 percent of these contributors hail from Latin America and 15 percent are from Africa, a more global distribution than comparable Silicon Valley startups. 
 
@@ -194,14 +194,14 @@ VSP news:
 
 - New VSP launched by the YieldWallet staking-as-a-service provider, available at [decred.yieldwallet.io](https://decred.yieldwallet.io/). Service fee is 2%.
 - [decredvoting.com](https://decredvoting.com/) VSP [announced](https://www.reddit.com/r/decred/comments/euqd4h/introducing_split_ticket_dashboard_on/) a new split ticket dashboard that "provides split ticket users with a complete summary view of all their split tickets along with personalized analytics data".
-- The following VSPs were removed from the [listing](https://decred.org/vsp/) for poor performance: [d1pool.com](https://github.com/decred/dcrwebapi/pull/63), [dcr.grassfed.network](https://github.com/decred/dcrwebapi/pull/70) and [dcr.pos.fans](https://github.com/decred/dcrwebapi/pull/79).
+- The following VSPs removed from the [listing](https://decred.org/vsp/) for their poor performance: [d1pool.com](https://github.com/decred/dcrwebapi/pull/63), [dcr.grassfed.network](https://github.com/decred/dcrwebapi/pull/70) and [dcr.pos.fans](https://github.com/decred/dcrwebapi/pull/79).
 
 It turns out that the [dcr.farm](https://dcr.farm/) VSP runs a bunch of useful services without any advertising:
 
 - [seed.dcr.farm](https://seed.dcr.farm/) is a dcrd seed node with dedicated bandwidth, located in France.
 - [explorer.dcr.farm](https://explorer.dcr.farm/) is an alternative explorer for Decred blockchain.
 - Sophisticated [status dashboard](https://status.dcr.farm/) for all services, including the 6 voting wallets.
-- We're actively using it at DJ but let's mention for completeness: [charts.dcr.farm](https://charts.dcr.farm/) has [~16 dashboards](https://charts.dcr.farm/dashboards) with various charts with some unique like [Nodes](https://charts.dcr.farm/d/000000014/nodes), [VSPs](https://charts.dcr.farm/d/000000016/proof-of-stake-pools) and [Transaction Fees](https://charts.dcr.farm/d/000000013/transaction-fees) showing irregular high and low fees.
+- This is actively used for DJ but mentioning for completeness: [charts.dcr.farm](https://charts.dcr.farm/) has [~16 dashboards](https://charts.dcr.farm/dashboards) with some unique charts like [Nodes](https://charts.dcr.farm/d/000000014/nodes) (node versions over time), [VSPs](https://charts.dcr.farm/d/000000016/proof-of-stake-pools) (VSP stats over time) and [Transaction Fees](https://charts.dcr.farm/d/000000013/transaction-fees) (irregular high and low fees).
 
 Exchanges:
 
@@ -241,9 +241,9 @@ Upcoming:
 
 ## Media
 
-[Decred Drive](https://medium.com/@decreddrive), a new weekly newsletter, was [launched](https://twitter.com/DecredDragon/status/1215309738293985280) by @decreddragon on Jan 9 and has had 4 issues so far.
+[Decred Drive](https://medium.com/@decreddrive), a new weekly newsletter, was [launched](https://twitter.com/DecredDragon/status/1215309738293985280) by @decreddragon on Jan 9 and published 4 issues so far.
 
-Decred was featured in the new Our Network weekly newsletter issues [2](https://ournetwork.substack.com/p/our-network-issue-2) and [6](https://ournetwork.substack.com/p/our-network-issue-6), with @Checkmate providing charts and insights about Decred on-chain data and @richardred providing one chart about Politeia. Each week the newsletter includes 5 graphs and comments for a number of different blockchain projects.
+Decred was featured in the new Our Network weekly newsletter issues [#2](https://ournetwork.substack.com/p/our-network-issue-2) and [#6](https://ournetwork.substack.com/p/our-network-issue-6), with @Checkmate providing charts and insights about Decred on-chain data and @richardred providing one chart about Politeia. Each week the newsletter includes 5 graphs and comments for a number of different blockchain projects.
 
 Checkmate made the bear case for Ethereum as part of an intended "[crypto rumble](https://bankless.substack.com/p/why-eth-wont-sustain-a-monetary-premium)" in the Bankless newsletter. Someone is supposed to write a rebuttal to his critique but the person who planned to do this has pulled out and a new challenger is being sought. Vitalik Buterin [responded](https://www.reddit.com/r/ethereum/comments/ewb9as/why_eth_wont_sustain_a_monetary_premium/fg2x4oz/) to some comments about the write-up on Reddit, maybe he will take up the [challenge](https://twitter.com/RyanSAdams/status/1223323007675961344).
 
@@ -272,8 +272,8 @@ Videos:
 
 Audio:
 
-- @akinsawyerr appeared on Tom Shaugnessy's Chain Reaction podcast to talk about Governance Reimagined ([podbean](https://fiftyonepercent.podbean.com/e/decred/))
-- Ep. 302 of Crypto 101, Governing the Masses w/ Decred, featured @lukebp ([podbean](https://www.podbean.com/media/share/dir-j5baa-7c90e87), [soundcloud](https://soundcloud.com/crypto101podcast/ep-302-governing-the-masses-w-decred))
+- @akinsawyerr appeared on Tom Shaugnessy's Chain Reaction podcast to talk about Governance Reimagined. ([podbean](https://fiftyonepercent.podbean.com/e/decred/))
+- Ep. 302 of Crypto 101, Governing the Masses w/ Decred, featured @lukebp. ([podbean](https://www.podbean.com/media/share/dir-j5baa-7c90e87), [soundcloud](https://soundcloud.com/crypto101podcast/ep-302-governing-the-masses-w-decred))
 - Decred in Depth Ep. 16 - @permabullnino discusses the Politeia proposal process and his ongoing work analyzing ticket movements on the Decred chain, introducing concepts like TVWAP and Hodler conversion rates. ([libsyn](https://decredindepth.libsyn.com/permabull-nino-block-subsidies-ticket-pool-vwap-hodler-conversion-rates), [soundcloud](https://soundcloud.com/decredindepth/ep-16-permabull-nino-block-subsidies-ticket-pool-vwap-hodler-conversion-rates))
 - Decred in Depth Ep. 17 - @ammarooni talks about Toronto's rich crypto history, the tokenomics of DCR, BTC and ETH, and considers Decred as an infrastructure provider, productive asset and economic breakthrough. ([libsyn](http://decredindepth.libsyn.com/ammar-nasier-decred-an-economic-breakthrough))
 
