--- a/journal/202001.md
+++ b/journal/202001.md
@@ -325,9 +325,13 @@ The price movement of Bitcoin from ~6500 to the ~9000 range spurred the price in
 
 ## Relevant External
 
+Bitcoin celebrated its 11th anniversary. Since Jan 3, 2009, the Bitcoin network has operated with [99.9848% uptime](http://bitcoinuptime.com/).
+
 December's mining report from CoinShares notes a 80% Bitcoin hashrate increase since Jun 2019, from ~50 to ~90 Eh/s (Exahashes per second). 70% of the added ~40 Eh/s is speculated to come from China, while China's share in the total hashrate is estimated to be 65%. The "breakeven" and "miner capitulation" prices are estimated at ~$6,100 and ~$3,900, respectively. Check the [highlights](https://medium.com/coinshares/bitcoins-hash-rate-grew-more-than-80-since-june-mostly-within-china-7444b20b2c89) and the full linked report for more interesting numbers.
 
 State of the Network 2019 [Year in Review](https://coinmetrics.substack.com/p/state-of-the-network-2019-year-in) by Coin Metrics compared the performance of the largest 18 cryptoassets (including DCR) across a set of market and chain metrics.
+
+Monero announced [RPC-Pay](https://www.monerooutreach.org/stories/RPC-Pay.html), a new scheme for instant and private microtransactions where clients pay with mining hashes for using a compliant server, such as a Monero node. "Hashes received as payment are used by the server to earn income, and because of Monero's RandomX the mining hashes can be calculated efficiently using most popular CPUs. Paying with just hashes instead of Monero itself means that RPC-Pay does not burden the Monero network or leave a record. With RPC-Pay, mining hashes become a new stealthy smallest unit of payment in the Monero universe.". Primo project is the first external application of the concept to implement paid website content delivery.
 
 [Nakamoto](https://nakamoto.com/), a new cryptocurrency-themed journal, launched on the 11th anniversary of Bitcoin's genesis block with a selection of articles from prominent blockchain personalities. The journal describes itself (and contributors) as being "pro-Bitcoin", but this caused quite a lot of [controversy](https://cryptoslate.com/nakamowho-blog-by-pro-bitcoin-technologists-bashed-by-btc-maximalists/) with some Bitcoin maximalists who took exception to articles which were about cryptocurrency projects other than Bitcoin. Many people listed as contributors have not yet [published](https://modernconsensus.com/cryptocurrencies/bitcoin/bitcoin-journal-nakamotos-rocky-start/) articles in the journal, but listing names like Roger Ver and Brendan Blumer (Block.one CEO) seems to have been enough to have other contributors like Tuur Demeester [withdrawing](https://twitter.com/TuurDemeester/status/1213939900476743680) their name.
 
@@ -353,13 +357,11 @@ After [failing](https://www.reddit.com/r/dashpay/comments/egl6eu/dash_force_news
 
 A European Central Bank [working paper](https://www.ecb.europa.eu/pub/pdf/scpwps/ecb.wp2351~c8c18bbd60.en.pdf?9bd63a4ddea2300dca05f2ccaa08c0e0) has indicated that the ECB would need to control the volume being used of any Central Bank Digital Currency (CBDC). One [analysis](https://cointelegraph.com/news/europe-central-bank-proposes-unattractive-rates-for-digital-currency) of the paper suggested that unattractive rates would be set for large holdings to discourage heavy use of the digital currency. One concern about heavy use of a CBDC would be that holders could move their funds outside the ECB's jurisdiction more easily in times of crisis.
 
-https://www.monerooutreach.org/stories/RPC-Pay.html {worth covering?}
-
-{ Proof of Keys on Jan 3: how did it go? any withdrawal problems? tell that while Jan 3 is behind, it's never too late to check your service that you still can withdraw, that they won't block your withdrawal for lame reasons and that the support is responsive }
-
 Perpetrators of the PlusToken scam are [still](https://blog.chainalysis.com/reports/plustoken-scam-bitcoin-price) churning and selling the ill-gotten 180,000 BTC from their Ponzi scheme. Although 6 people have been arrested in connection with PlusToken, the funds are still moving and being sold through OTC trades on Huobi [apparently](https://blog.chainalysis.com/reports/plustoken-scam-bitcoin-price) - possibly affecting the BTC price. The scammers' tokens are being tracked despite their use of mixing and 24,000 transactions involving 71,000 addresses to try and make this difficult - because they re-used an address. While an estimated $185 million worth of the BTC has been sold, 790K ETH of a total 800K remains untouched.
 
 The custodial bitcoin wallet provider Bottle Pay [shut down](https://www.coindesk.com/bitcoin-app-bottle-pay-shuts-down-over-impending-eu-money-laundering-laws) in December, citing the AMLD5 EU regulation coming into effect Jan 10, 2020. From the [announcement](https://bottlepay.helpscoutdocs.com/article/40-official-announcement-on-the-shutdown-of-bottle-pay): "The amount and type of extra personal information we would be required to collect from our users would alter the current user experience so radically, and so negatively, that we are not willing to force this onto our community". Standing by the principles and shutting down is the opposite of doing [whatever it takes](https://thenextweb.com/hardfork/2018/09/05/shapeshift-cryptocurrency-exchange-kyc/) to keep the business afloat. The case can serve as a yet another signal to focus efforts on improving self-custodial crypto software.
+
+Kraken Security Labs [disclosed](https://blog.kraken.com/post/3662/kraken-identifies-critical-flaw-in-trezor-hardware-wallets/) a critical security flaw in both Trezor One and Trezor Model T that allows to extract the seed during just 15 minutes of physical access to the device. "The attack takes advantage of inherent flaws within the microcontroller used in the Trezor wallets. This unfortunately means that it is difficult for the Trezor team to do anything about this vulnerability without a hardware redesign.". The recommended protections are not allow anyone physical access to the device and enabling the Passphrase feature in the Trezor Client software.
 
 $500 billion being pumped into the overnight money (repo) market by the Fed has drawn the attention of Colin Harper of Bitcoin Magazine, in a good [article](https://bitcoinmagazine.com/articles/the-fed-has-pumped-500-billion-into-the-repo-market-where-does-it-end) that introduces the subject and asks what is going on.
 
@@ -374,5 +376,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, Dustorf, kozel, richardred, s\_ben
-- reviews and feedback: buck54321, davecgh, dnldd, emiliomann, jholdstock, lukebp, matheusd
+- reviews and feedback: ammarooni, buck54321, davecgh, dnldd, emiliomann, jholdstock, lukebp, matheusd
 - title image: {}
